--- a/styles.css
+++ b/styles.css
@@ -112,4 +112,11 @@
     text-align: center;
     background-color: #e5e7eb;
     padding: 20px;
+    margin-top: auto;
+}
+
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
